compiler/weave_syntax/tests/data/syntax/IncompleteNamespace4.error
error: unexpected token ';', expected member declaration
        --> <source>:1:15
         |
       1 | namespace X { ;
         |               ^
error: expected '}'
        --> <source>:2:1
         |
       2 | 
         | ^
